# smaller-basic

./: README.md  SPECIFICATIONS.md  TODO.md  create_venv.sh  pyproject.toml
dot_figs/: ast-ast_arithmetical_expression.dot  ast-ast_lib.dot  ast-ast_literal.dot  ast-ast_log_bool_expression.dot  ast-ast_string_expression.dot  ast-expression.dot  ast-library.dot  ast-source.dot  ast-test_dot.dot
source_code/: .if_while_for.sb.swp  .prog1.sb.swp  assignment.sb  ast.sb  ast_arithmetical_expression.sb  ast_array.sb  ast_if.sb  ast_if_while_for.sb  ast_literal.sb  ast_log_bool_expression.sb  ast_string_expression.sb  ast_sub.sb  check.sb  expression.sb  first_prog.sb  i_1.sb  i_10.sb  i_2.sb  i_3.sb  i_4.sb  i_5.sb  i_6.sb  i_7.sb  i_8.sb  i_9.sb  if.sb  if_while_for.sb  library.sb  prog1.sb  prog_with_error.sb  second_prog.sb  source.sb  test.sb  test_dot.sb  test_goto.sb  val1.sb  val2.sb  val3.sb  val4.sb  val5.sb  (+3 more)
src/: __init__.py  config.py  main.py
src/abstract-syntax-tree/: ASTVisitor.py
src/abstract_syntax_tree/: abstract_ast_node.py  ast.py  ast_visitor.py  ast_visitor_helper.py  goto_exception.py  handle_goto.py
src/error/: smaller_basic_error_listener.py
src/grammar/: .SmallerBasic.g4.swp  SmallerBasic.g4  SmallerBasic.g4.old  SmallerBasic.interp  SmallerBasic.tokens  SmallerBasicLexer.interp  SmallerBasicLexer.py  SmallerBasicLexer.tokens  SmallerBasicListener.py  SmallerBasicOld.g4  SmallerBasicParser.py  SmallerBasicVisitor.py  __init__.py  main.py
src/interpreter/: Interpreter.py  RunningRuntimeError.py  __init__.py  dispatch_table.py  interpreter.py  (+3 more)
(+59 files in other folders)
