[project]
name = "smaller-basic"
description = " A Python interpreter using ANTLR4 as a parser generator for a version of Microsoft's Small Basic language renamed Smaller Basic."
version = "0.1"
authors=[
    {name = "Federico Bruzzone", email = "federico.bruzzone@studenti.unimi.it"},
]

readme = "README.md"

license = {file = "LICENSE"}

requires-python = ">=3.9"

dependencies = [
    "antlr4-python3-runtime == 4.12.0",
    "liblet",
    "graphviz",
]

[tool.setuptools]
py-modules = []
